--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
       <div class="propiety">
         
         <img src="forest.jpg"  width="140" height="140" />
-        <h2>Sell your carts</h2>
-        <p>Get a good price for those old carts that you no longer use</p>
+        <h2>Sell your cards</h2>
+        <p>Get a good price for those old cards that you no longer use</p>
         <p><a class="btn btn-secondary" href="#">View details »</a></p>
       </div>
       <div class="propiety">
