--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="w3-content w3-display-container">
   
   <div class="w3-display-container mySlides">
-    <img src="slider1copia.jpg" style="width:100%" style="height: 600px !important;">
+    <img src="slider1copia.jpg" style="width:100%" >
     <a href="#"><div class="w3-display-bottomleft w3-large w3-container w3-padding-16 w3-black">
       Enjoy MTG
     </div></a>
